[package]
name = "lon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
stderrlog = "0.6.0"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = [ "derive" ] }
serde_json = "1.0.127"
sha2 = "0.10.8"

[dev-dependencies]
expect-test = "1.5.0"
assert_cmd = "2.0.16"
tempfile = "3.12.0"

[build-dependencies]
sha2 = "0.10.8"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny", priority = 1 }
needless_raw_string_hashes = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
